--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass": "^1.54.9",
     "socket.io-client": "^4.5.2",
     "string-similarity": "^4.0.4",
+    "usehooks-ts": "^2.7.2",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
