--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "crypto-js": "^4.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-countdown": "^2.3.2",
