--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
