--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,16 +6,17 @@ on:
 jobs:
   build:
     name: Deploy
-    runs-on: ubuntu-latest
     steps:
       - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@master
+        uses: fifsky/ssh-action@master
         with:
           host: 195.15.223.247
-          username: debian
+          user: debian
           password: ${{ secrets.RSA_KEY }}
-          port: 22
-          script: |
-            cd /home/debian/www/blindtus/client
-            git pull origin main
-            git status
+          command: |
+            cd /tmp
+            ls -a
+          # script: |
+          #   cd /home/debian/www/blindtus/client
+          #   git pull origin main
+          #   git status
