--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   build:
     name: Deploy
+    runs-on: ubuntu-latest
     steps:
       - name: executing remote ssh commands using password
         uses: fifsky/ssh-action@master
