--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "mui-markdown": "^0.5.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cookie-consent": "^8.0.1",
     "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
@@ -61,5 +63,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "markdown-to-jsx": "^7.1.7",
+    "prism-react-renderer": "^1.3.5"
   }
 }
