--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
     "@mui/x-data-grid": "^5.17.3",
+    "@porscheofficial/cookie-consent-banner-react": "^3.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,7 @@
     "react-cookie-consent": "^8.0.1",
     "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-player": "^2.11.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
