--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.10.6",
     "@mui/x-data-grid": "^5.17.3",
     "@porscheofficial/cookie-consent-banner-react": "^3.0.1",
+    "@tanstack/react-query": "^4.14.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
