--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
+    "react-markdown": "^8.0.3",
     "react-player": "^2.11.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
